fix: OG meta tags + favicon + social share image - shows Alpha-Omega instead of frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Alpha-Omega | AI Trading System</title>
+    <meta name="description" content="Council of Experts AI Trading System — Multi-agent stock analysis with SwingTrader AI v4.3 conviction scoring." />
+
+    <!-- Open Graph (WhatsApp, Facebook, LinkedIn) -->
+    <meta property="og:title" content="Alpha-Omega | AI Trading System" />
+    <meta property="og:description" content="Council of Experts — Multi-agent stock analysis with 5-pillar conviction scoring, real-time market data, and trade plans." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://alpha-omega-ngfw.vercel.app/" />
+    <meta property="og:image" content="https://alpha-omega-ngfw.vercel.app/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Alpha-Omega | AI Trading System" />
+    <meta name="twitter:description" content="Multi-agent AI stock scanner with real-time conviction scoring." />
+    <meta name="twitter:image" content="https://alpha-omega-ngfw.vercel.app/og-image.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
     <div id="root"></div>
